--- a/Changes
+++ b/Changes
@@ -10,3 +10,8 @@ Revision history for Wiktionary::Parser
         utilize MediaWiki::API package
 
 
+0.03    2012-07-08
+        Added subdocuments to provide more functionality when retrieving child sections of the document.
+        Follow Wikisaurus links for synonyms, hyponyms, hypernyms, etc and include content from those pages.
+        Provided method for downloading audio files for pronunciations
+        Normalize language codes and provide consistent language names
