--- a/README.pod
+++ b/README.pod
@@ -7,6 +7,7 @@ Wiktionary::Parser - Client and Parser of content from the Wiktionary API
 This package may be used to query the Wiktionary API (en.wiktionary.org/w/api.php) for documents by title.  It parses the resulting MediaWiki document and provides access to data structures containing word senses, translations, synonyms, parts of speech, etc.  It also provides access to the raw content of each MediaWiki section should you wish to extract other data on your own, or build on top of this package.  
 
 The repository for this package is available on github at https://github.com/clbecker/perl-wiktionary-parser
+And on CPAN at: http://search.cpan.org/~clbecker/Wiktionary-Parser/
 
 =head1 Usage
 
@@ -59,60 +60,150 @@ See https://github.com/clbecker/perl-wiktionary-parser/wiki for details and exam
 
 =item B<get_derived_terms>
 
-Returns a hashref mapping language to a list word derived terms / phrases
+Returns a reference to a hash mapping language to a list of derived terms and phrases
 
      my $derived_words = $document->get_derived_words();
 
+     print Dumper $derived_words;
+     
+     $VAR1 = {
+          'en' => [
+                'bergamot orange',
+                'bitter orange',
+                'blood orange',
+                'burnt orange',
+                ...
+          ],
+          ...
+     }
+
 =item B<get_parts_of_speech>
 
-Returns a hashref mapping language to a list of parts of speech.  See https://github.com/clbecker/perl-wiktionary-parser/wiki/Parts-of-speech for details.  
+Returns a reference to a hash mapping language to a list of parts of speech.  See https://github.com/clbecker/perl-wiktionary-parser/wiki/Parts-of-speech for details.  
 
 
-	my $parts_of_speech = $document->get_parts_of_speech();
+     my $parts_of_speech = $document->get_parts_of_speech();
+	
+     print Dumper $parts_of_speech;
+     
+     $VAR1 = {
+          'en' => {
+                  'language' => 'English',
+                  'part_of_speech' => [
+                                        'noun',
+                                        'adj',
+                                        'verb'
+                                      ]
+                },
+          'sv' => {
+                    'language' => 'Swedish',
+                    'part_of_speech' => [
+                                          'adjective',
+                                          'noun'
+                                        ]
+                  },
+          ...
+     }
+
 
 =item B<get_pronunciations>
 
-Returns a hashref mapping language to a pronunciation metadata.  See https://github.com/clbecker/perl-wiktionary-parser/wiki/pronunciations for details.  
+Returns a reference to a hash mapping language to a pronunciation metadata.  See https://github.com/clbecker/perl-wiktionary-parser/wiki/pronunciations for details.  
 
-	my $pronunciations = $document->get_pronunciations();
-
+     my $pronunciations = $document->get_pronunciations();
+     
 =item B<get_translations>
 
-Returns a hashref mapping word sense to language to translated words
+Returns a reference to a hash mapping word sense to language to translated words
+
+     my $translations = $document_get_translations();
+
+     print Dumper $translations
+     
+     $VAR1 = {
+          'fruit' => {
+               'tr' => {
+                    'language' => 'Turkish',
+                    'translations' => [
+                         'portakal'
+                    ],
+                    'part_of_speech' => 'noun'
+               },
+               'fr' => {
+                    'language' => 'French',
+                    'translations' => [
+                         'orange'
+                    ],
+                    'part_of_speech' => 'noun'
+               },
+               'da' => {
+                    'language' => 'Danish',
+                    'translations' => [
+                         'appelsin'
+                    ],
+                    'part_of_speech' => 'noun'
+               },
+               ...
+          },
+          ...    
+     }
 
 
-	my $translations = $document_get_translations();
-	
 =item B<get_word_senses>
 
 Returns an arrayref containing a list of word senses
 
 
 	my $word_senses = $document->get_word_senses();
-	
-
+     	
+     print Dumper $word_senses;
+     
+     $VAR1 = [
+          'tree',
+          'colour',
+          'fruit',
+          ...
+     ]
 
 =item B<get_synonyms>
 
-Returns a hashref mapping language and word sense to a list of synonyms
+Returns a reference to a hash mapping language and word sense to a list of synonyms
 
      my $synonyms = $document->get_synonyms();
 
+     # Synonyms of 'cat'
+     print Dumper $synonyms;
+     
+     $VAR1 = {
+          'en' => {
+               'language' => 'English',
+               'sense' => {
+                    'domestic species' => [
+                         'housecat',
+                         'kitten',
+                         'kitty',
+                         ...
+                    ],
+                    ...
+               },
+          }
+     }
+
 =item B<get_hyponyms>
 
-Returns a hashref mapping language and word sense to a list of hyponyms
+Returns a reference to a hash mapping language and word sense to a list of hyponyms
 
      my $hyponyms = $document->get_hyponyms();
 
 =item B<get_hypernyms>
 
-Returns a hashref mapping language and word sense to a list of hypernyms
+Returns a reference to a hash mapping language and word sense to a list of hypernyms
 
      my $hypernyms = $document->get_hypernyms();
 
 =item B<get_antonyms>
 
-Returns a hashref mapping language and word sense to a list of antonyms
+Returns a reference to a hash mapping language and word sense to a list of antonyms
 
      my $antonyms = $document->get_antonyms();
 
@@ -126,7 +217,7 @@ Given the section number, returns the corresponding Wiktionary::Parser::Section 
 
 =item B<get_sections>
 
-Returns a hashref of Wiktionary::Parser::Section objects.  These provide access to the data for each section of the document.
+Returns a reference to a hash of Wiktionary::Parser::Section objects.  These provide access to the data for each section of the document.
 The format of the hash is { $section_number => object }  e.g. {'1.2.1' => $obj}
 
 =item B<get_sections> (title => STRING_OR_REGEX)
